--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-config": "^0.11.7",
+    "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.9.11",
     "react-native-maps": "^0.25.0",
