--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jetifier": "^1.6.3",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-base": "^1.1.0",
     "react-native-config": "^0.11.7",
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.3.0",
